@@ -7,6 +7,7 @@ INCOMPATIBLE CHANGES
   TEZ-3029. Add an onError method to service plugin contexts.
 
 ALL CHANGES:
+  TEZ-3126. Log reason for not reducing parallelism
   TEZ-3131. Support a way to override test_root_dir for FaultToleranceTestRunner.
   TEZ-3067. Links to tez configs documentation should be bubbled up to top-level release page.
   TEZ-3123. Containers can get re-used even with conflicting local resources.
@@ -338,6 +339,7 @@ INCOMPATIBLE CHANGES
   TEZ-2949. Allow duplicate dag names within session for Tez.
 
 ALL CHANGES
+  TEZ-3126. Log reason for not reducing parallelism
   TEZ-3123. Containers can get re-used even with conflicting local resources.
   TEZ-3117. Deadlock in Edge and Vertex code
   TEZ-3103. Shuffle can hang when memory to memory merging enabled
